--- a/src/docs/asciidoc/01.adoc
+++ b/src/docs/asciidoc/01.adoc
@@ -1,11 +1,10 @@
 = Erzeuge ein leeren Truststore
 Frank Rahn <https://github.com/frank-rahn[@frank-rahn]>
 :toc:
+:toc-placement!:
 :toclevels: 3
 :toc-title: Inhaltsverzeichnis
-:toc-placement!:
 :sectanchors:
-:include-dir: _includes
 
 toc::[]
 
@@ -21,4 +20,5 @@ $ keytool -delete -alias temp -keystore truststore.jks \ # <3>
 <2> Passwort des Schlüsselpaars und des Truststores
 <3> Löschen des temporären Schlüsselpaar aus dem Truststores
 
-include::{include-dir}/footer.adoc[]
+== Homepage des Autors
+https://www.frank-rahn.de/?utm_source=github&utm_medium=readme&utm_campaign=tls-proxy&utm_content=top[Frank W. Rahn]
