--- a/src/docs/asciidoc/README.adoc
+++ b/src/docs/asciidoc/README.adoc
@@ -8,8 +8,11 @@ Frank Rahn <https://github.com/frank-rahn[@frank-rahn]>
 
 toc::[]
 
+Als Passwort wird immer `password` verwendet.
+
 == Inhalt
 * link:01.adoc[Erzeuge ein leeren Truststore]
+* link:02.adoc[Ein selbst-unterzeichnetes (self-signed) Root-Zertifikat erzeugen]
 
 == Homepage des Autors
 https://www.frank-rahn.de/?utm_source=github&utm_medium=readme&utm_campaign=tls-proxy&utm_content=top[Frank W. Rahn]
