--- a/HELP.adoc
+++ b/HELP.adoc
@@ -13,25 +13,8 @@ For further reference, please consider the following sections:
 == Spring Guides
 The following guides illustrate how to use some features concretely:
 
-* https://spring.io/guides/gs/routing-and-filtering[Routing and Filtering]
 * https://spring.io/guides/gs/actuator-service/[Building a RESTful Web Service with Spring Boot Actuator]
-* https://spring.io/guides/gs/rest-service/[Building a RESTful Web Service]
-* https://spring.io/guides/gs/serving-web-content/[Serving Web Content with Spring MVC]
-* https://spring.io/guides/tutorials/bookmarks/[Building REST services with Spring]
-
-== Spring Cloud Netflix Maintenance Mode
-The dependencies listed below are in maintenance mode. We do not recommend adding them to
-new projects:
-
-* Zuul
-
-The decision to move most of the Spring Cloud Netflix projects to maintenance mode was
-a response to Netflix not continuing maintenance of many of the libraries that we provided
-support for.
-
-Please see https://spring.io/blog/2018/12/12/spring-cloud-greenwich-rc1-available-now#spring-cloud-netflix-projects-entering-maintenance-mode[this blog entry]
-for more information on maintenance mode and a list of suggested replacements for those
-libraries.
+* https://github.com/spring-cloud-samples/spring-cloud-gateway-sample[Using Spring Cloud Gateway]
 
 == Homepage des Autors
-https://www.frank-rahn.de/?utm_source=github&utm_medium=help&utm_campaign=sll-proxy&utm_content=top[Frank W. Rahn]
+https://www.frank-rahn.de/?utm_source=github&utm_medium=help&utm_campaign=tls-proxy&utm_content=top[Frank W. Rahn]
